<?xml version="1.0"?>
<package format="3">
  <name>sensing_utils</name>
  <version>0.0.1</version>
  <description>Utilities for quick health checks of ROS2 sensors (topics, services, etc.).</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
